--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,6 +1,6 @@
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://127.0.0.1:3306/test?characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull
-jdbc.username=root
-jdbc.password=
+jdbc.url=jdbc:mysql://192.168.10.125/wxj_test?characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&autoReconnect=true&autoReconnectForPools=true
+jdbc.username=jq
+jdbc.password=jq
 hibernate.dialect=sample.utils.FixedMySQLInnoDBDialect
 hibernate.show_sql=false
